added counter/ added q&a iteration

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Dev Students: Code Quiz</h1>
+        <h1>Aspiring developers: Code Quiz</h1>
     </header>
     <main class="card" id="card">
         <section class="instructions" id="instructions">
