landing page CSS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Code Quiz</title>
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <!-- <link href="" rel="stylesheet"> -->
 </head>
 <body>
     <header>
@@ -15,11 +15,10 @@
         <section class="instructions" id="instructions">
             <h2>Instructions</h2>
             <p>
-                Welcome to Code Quiz: a multiple choice test of your Javascript knowledge.  
-                Wrong answers incur a penalty!
+                Welcome to Code Quiz: a multiple choice test of your Javascript knowledge.
             </p>
             <p>
-                Press the START button to begin!
+                Wrong answers deduct from your final score!
             </p>
             <div class="start">
                 <button class="btn" id="start-btn">START</button>
