--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             <div class="score"></div>
         </div>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
