2nd script 2nd html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <footer>
         <div class="scores-container">
             <div class="high-score">
-                <a href="./highscore.html">View High Scores</a>
+                <a href="score.html">View High Scores</a>
             </div>
             <div class="score"></div>
         </div>
